@@ -120,6 +120,7 @@ APU_FIND_LDAP
 APU_CHECK_DBM
 APU_CHECK_DBD
 APU_CHECK_DBD_MYSQL
+APU_CHECK_DBD_SQLITE3
 APU_CHECK_DBD_SQLITE2
 APU_FIND_EXPAT
 APU_FIND_ICONV
