@@ -79,6 +79,7 @@
 
 #define APU_HAVE_PGSQL         @apu_have_pgsql@
 #define APU_HAVE_MYSQL         @apu_have_mysql@
+#define APU_HAVE_SQLITE3       @apu_have_sqlite3@
 #define APU_HAVE_SQLITE2       @apu_have_sqlite2@
 
 #define APU_HAVE_APR_ICONV     @have_apr_iconv@
